--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
     
 jobs:
-  CI-BLUE:
+  CI:
     runs-on: ubuntu-latest
     
     steps:
@@ -17,10 +17,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_PWD }}
-      
-      - name: Criando o arquivo HTML com o blue page
-        run: sed "s/{{COLOR}}/blue/g" ./src/templates/index.html.template > ./src/templates/index.html      
-
       - name: Construção da imagem Docker do blue page
         uses: docker/build-push-action@v3.2.0
         with: 
@@ -28,32 +24,9 @@ jobs:
           file: ./src/Dockerfile
           push: true
           tags: |
-            fabricioveronez/web-color:blue
-            fabricioveronez/web-page:blue
+            fabricioveronez/video-web-color:${{github.run_number}}
+            fabricioveronez/video-web-color:blue
 
-  CI-GREEN:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3.1.0
-      
-      - name: Autenticação no Docker Hub
-        uses: docker/login-action@v2.1.0
-        with:
-          username: ${{ secrets.DOCKERHUB_USER }}
-          password: ${{ secrets.DOCKERHUB_PWD }}
-
-      - name: Criando o arquivo HTML com o green page
-        run: sed "s/{{COLOR}}/green/g" ./src/templates/index.html.template > ./src/templates/index.html      
-
-      - name: Construção da imagem Docker do green page
-        uses: docker/build-push-action@v3.2.0
-        with: 
-          context: ./src
-          file: ./src/Dockerfile
-          push: true
-          tags: |
-            fabricioveronez/web-color:green
-            fabricioveronez/web-page:green
 
 
     
