--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,31 @@
-# name: CI-CD
+name: CI-CD
 
-# on: 
-#   push: 
-#     branches: ["main"]
-#   workflow_dispatch:
+on: 
+  push: 
+    branches: ["main"]
+  workflow_dispatch:
     
-# jobs:
-#   CI:
-#     runs-on: ubuntu-latest
+jobs:
+  CI:
+    runs-on: ubuntu-latest
     
-#     steps:
-#       - uses: actions/checkout@v3.1.0
+    steps:
+      - uses: actions/checkout@v3.1.0
       
-#       - name: Autenticação no Docker Hub
-#         uses: docker/login-action@v2.1.0
-#         with:
-#           username: ${{ secrets.DOCKERHUB_USER }}
-#           password: ${{ secrets.DOCKERHUB_PWD }}
-#       - name: Construção da imagem Docker da Web Color Page
-#         uses: docker/build-push-action@v3.2.0
-#         with: 
-#           context: ./src
-#           file: ./src/Dockerfile
-#           push: true
-#           tags: |
-#             fabricioveronez/video-web-color:${{github.run_number}}
-#             fabricioveronez/video-web-color:latest
+      - name: Autenticação no Docker Hub
+        uses: docker/login-action@v2.1.0
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_PWD }}
+      - name: Construção da imagem Docker da Web Color Page
+        uses: docker/build-push-action@v3.2.0
+        with: 
+          context: ./src
+          file: ./src/Dockerfile
+          push: true
+          tags: |
+            fabricioveronez/video-web-color:${{github.run_number}}
+            fabricioveronez/video-web-color:latest
 
 
 
