--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,21 +9,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Docker Login
-      uses: docker/login-action@v3.0.0
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v5.1.0
-      with:
-        context: ./src
-        file: ./src/Dockerfile
-        push: true
-        tags: |
-          kadymo/web-color:${{ github.run_number }}
-          kadymo/web-color:latest
+      - name: Checkout
+        uses: actions/checkout@v4.1.1
+      
+      - name: Docker Login
+        uses: docker/login-action@v3.0.0
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+  
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5.1.0
+        with:
+          context: ./src
+          file: ./src/Dockerfile
+          push: true
+          tags: |
+            kadymo/web-color:${{ github.run_number }}
+            kadymo/web-color:latest
 
   CD:
     runs-on: ubuntu-latest
